# fan-platform

./: .gitignore  README.md  package-lock.json
.github/workflows/: ci.yml
backend/: .env  __init__.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  seed.py
backend/backend/tests/: test_dummy.py
backend/tests/: test_health.py
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  postcss.config.cjs
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: MatchCard.tsx
frontend/src/hooks/: useCreateMatch.ts  useDeleteMatch.ts  useMatch.ts  useMatches.ts  useMatchesInfinite.ts  useUpdateMatch.ts
frontend/src/pages/: EditMatchPage.tsx  MatchDetailPage.tsx  MatchPage.tsx  MatchesPage.tsx  NewMatchPage  NewMatchPage.tsx
