[tool.poetry]
name        = "fan-platform-backend"
version     = "0.1.0"
description = "FastAPI backend for fan-platform"
authors     = ["Your Name <you@domain.com>"]

[tool.poetry.dependencies]
python             = "^3.12"
fastapi            = "^0.103.0"
uvicorn            = { extras = ["standard"], version = "^0.25.0" }
sqlmodel           = "^0.0.8"
typing-extensions  = "^4.14.0"

[tool.poetry.dev-dependencies]
pytest             = "^7.0"
httpx              = "^0.24"
pytest-asyncio     = "^0.21"

[build-system]
requires       = ["poetry-core>=1.8.0"]
build-backend  = "poetry.core.masonry.api"
